--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,5 +1,6 @@
 @import "tailwindcss";
-
+@import 'leaflet/dist/leaflet.css';
+@import 'leaflet-control-geocoder/dist/Control.Geocoder.css';
 /* Tùy chỉnh dấu chấm cho react-slick */
 .custom-dots {
   bottom: 20px !important; /* Đẩy dấu chấm lên trên một chút */
